# Slack_Sociality_App

./: .gitignore  Pipfile  README.md  app.py  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
src/: app.py  requirements.txt
