[tool.poetry]
name = "slack-sociality-app"
version = "0.1.0"
description = ""
authors = ["r-wata <ryusei.watanabe@fuji.waseda.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.122"
slack-sdk = "^3.27.2"
slack-bolt = "^1.18.1"
openai = "^1.33.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
